--- a/data/.gitignore
+++ b/data/.gitignore
@@ -5,3 +5,4 @@
 /networks_and_trajectories_var10.RData
 /networks_and_trajectories_var15.RData
 /networks_and_trajectories_var20.RData
+/Ckl_distribution.RData
