--- a/data/.gitignore
+++ b/data/.gitignore
@@ -6,3 +6,17 @@
 /networks_and_trajectories_var15.RData
 /networks_and_trajectories_var20.RData
 /Ckl_distribution.RData
+/networks_and_trajectories_binary_data_3.RData
+/networks_and_trajectories_binary_data_4.RData
+/networks_and_trajectories_binary_data_5.RData
+/networks_and_trajectories_binary_data_6.RData
+/networks_and_trajectories_binary_data_10.RData
+/networks_and_trajectories_binary_data_15.RData
+/networks_and_trajectories_binary_data_20.RData
+/networks_and_trajectories_ternary_data_3.RData
+/networks_and_trajectories_ternary_data_4.RData
+/networks_and_trajectories_ternary_data_5.RData
+/networks_and_trajectories_ternary_data_6.RData
+/networks_and_trajectories_ternary_data_10.RData
+/networks_and_trajectories_ternary_data_15.RData
+/networks_and_trajectories_ternary_data_20.RData
