Modified and executed Max_kl_distribution

--- a/data/.gitignore
+++ b/data/.gitignore
@@ -20,3 +20,4 @@
 /networks_and_trajectories_ternary_data_10.RData
 /networks_and_trajectories_ternary_data_15.RData
 /networks_and_trajectories_ternary_data_20.RData
+/Ckl_distribution.json
