--- a/data/.gitignore
+++ b/data/.gitignore
@@ -21,3 +21,9 @@
 /networks_and_trajectories_ternary_data_15.RData
 /networks_and_trajectories_ternary_data_20.RData
 /Ckl_distribution.json
+/networks_and_trajectories_quaternary_data_3.RData
+/networks_and_trajectories_quaternary_data_4.RData
+/networks_and_trajectories_quaternary_data_5.RData
+/networks_and_trajectories_quaternary_data_6.RData
+/networks_and_trajectories_quaternary_data_10.RData
+/networks_and_trajectories_quaternary_data_15.RData
