RData to json conversion

--- a/data/.gitignore
+++ b/data/.gitignore
@@ -27,3 +27,15 @@
 /networks_and_trajectories_quaternary_data_6.RData
 /networks_and_trajectories_quaternary_data_10.RData
 /networks_and_trajectories_quaternary_data_15.RData
+/networks_and_trajectories_binary_data_3.json
+/networks_and_trajectories_ternary_data_3.json
+/networks_and_trajectories_binary_data_4.json
+/networks_and_trajectories_ternary_data_4.json
+/networks_and_trajectories_binary_data_5.json
+/networks_and_trajectories_ternary_data_5.json
+/networks_and_trajectories_binary_data_6.json
+/networks_and_trajectories_ternary_data_6.json
+/networks_and_trajectories_binary_data_10.json
+/networks_and_trajectories_ternary_data_10.json
+/networks_and_trajectories_binary_data_15.json
+/networks_and_trajectories_ternary_data_15.json
