Added python algo results

--- a/data/.gitignore
+++ b/data/.gitignore
@@ -39,3 +39,5 @@
 /networks_and_trajectories_ternary_data_10.json
 /networks_and_trajectories_binary_data_15.json
 /networks_and_trajectories_ternary_data_15.json
+/networks_and_trajectories_binary_data_20.json
+/networks_and_trajectories_ternary_data_20.json
