New results with density 0.1 and 0.4

--- a/data/.gitignore
+++ b/data/.gitignore
@@ -41,3 +41,59 @@
 /networks_and_trajectories_ternary_data_15.json
 /networks_and_trajectories_binary_data_20.json
 /networks_and_trajectories_ternary_data_20.json
+/networks_and_trajectories_binary_data_01_3.RData
+/networks_and_trajectories_binary_data_01_4.RData
+/networks_and_trajectories_binary_data_01_5.RData
+/networks_and_trajectories_binary_data_01_6.RData
+/networks_and_trajectories_binary_data_01_10.RData
+/networks_and_trajectories_binary_data_01_15.RData
+/networks_and_trajectories_binary_data_01_20.RData
+/networks_and_trajectories_binary_data_04_3.RData
+/networks_and_trajectories_binary_data_04_4.RData
+/networks_and_trajectories_binary_data_04_5.RData
+/networks_and_trajectories_binary_data_04_6.RData
+/networks_and_trajectories_binary_data_04_10.RData
+/networks_and_trajectories_binary_data_04_15.RData
+/networks_and_trajectories_binary_data_04_20.RData
+/networks_and_trajectories_ternary_data_01_3.RData
+/networks_and_trajectories_ternary_data_01_4.RData
+/networks_and_trajectories_ternary_data_01_5.RData
+/networks_and_trajectories_ternary_data_01_6.RData
+/networks_and_trajectories_ternary_data_01_10.RData
+/networks_and_trajectories_ternary_data_01_15.RData
+/networks_and_trajectories_ternary_data_01_20.RData
+/networks_and_trajectories_ternary_data_04_3.RData
+/networks_and_trajectories_ternary_data_04_4.RData
+/networks_and_trajectories_ternary_data_04_5.RData
+/networks_and_trajectories_ternary_data_04_6.RData
+/networks_and_trajectories_ternary_data_04_10.RData
+/networks_and_trajectories_ternary_data_04_15.RData
+/networks_and_trajectories_ternary_data_04_20.RData
+/networks_and_trajectories_binary_data_01_3.json
+/networks_and_trajectories_ternary_data_01_3.json
+/networks_and_trajectories_binary_data_01_4.json
+/networks_and_trajectories_ternary_data_01_4.json
+/networks_and_trajectories_binary_data_01_5.json
+/networks_and_trajectories_ternary_data_01_5.json
+/networks_and_trajectories_binary_data_01_6.json
+/networks_and_trajectories_ternary_data_01_6.json
+/networks_and_trajectories_binary_data_01_10.json
+/networks_and_trajectories_ternary_data_01_10.json
+/networks_and_trajectories_binary_data_01_15.json
+/networks_and_trajectories_ternary_data_01_15.json
+/networks_and_trajectories_binary_data_01_20.json
+/networks_and_trajectories_ternary_data_01_20.json
+/networks_and_trajectories_binary_data_04_3.json
+/networks_and_trajectories_ternary_data_04_3.json
+/networks_and_trajectories_binary_data_04_4.json
+/networks_and_trajectories_ternary_data_04_4.json
+/networks_and_trajectories_binary_data_04_5.json
+/networks_and_trajectories_ternary_data_04_5.json
+/networks_and_trajectories_binary_data_04_6.json
+/networks_and_trajectories_ternary_data_04_6.json
+/networks_and_trajectories_binary_data_04_10.json
+/networks_and_trajectories_ternary_data_04_10.json
+/networks_and_trajectories_binary_data_04_15.json
+/networks_and_trajectories_ternary_data_04_15.json
+/networks_and_trajectories_binary_data_04_20.json
+/networks_and_trajectories_ternary_data_04_20.json
