--- a/data/.gitignore
+++ b/data/.gitignore
@@ -97,3 +97,31 @@
 /networks_and_trajectories_ternary_data_04_15.json
 /networks_and_trajectories_binary_data_04_20.json
 /networks_and_trajectories_ternary_data_04_20.json
+/networks_and_trajectories_binary_data_02_3.RData
+/networks_and_trajectories_binary_data_02_4.RData
+/networks_and_trajectories_binary_data_02_5.RData
+/networks_and_trajectories_binary_data_02_6.RData
+/networks_and_trajectories_binary_data_02_10.RData
+/networks_and_trajectories_binary_data_02_15.RData
+/networks_and_trajectories_binary_data_02_20.RData
+/networks_and_trajectories_ternary_data_02_3.RData
+/networks_and_trajectories_ternary_data_02_4.RData
+/networks_and_trajectories_ternary_data_02_5.RData
+/networks_and_trajectories_ternary_data_02_6.RData
+/networks_and_trajectories_ternary_data_02_10.RData
+/networks_and_trajectories_ternary_data_02_15.RData
+/networks_and_trajectories_ternary_data_02_20.RData
+/networks_and_trajectories_binary_data_02_3.json
+/networks_and_trajectories_ternary_data_02_3.json
+/networks_and_trajectories_binary_data_02_4.json
+/networks_and_trajectories_ternary_data_02_4.json
+/networks_and_trajectories_binary_data_02_5.json
+/networks_and_trajectories_ternary_data_02_5.json
+/networks_and_trajectories_binary_data_02_6.json
+/networks_and_trajectories_ternary_data_02_6.json
+/networks_and_trajectories_binary_data_02_10.json
+/networks_and_trajectories_ternary_data_02_10.json
+/networks_and_trajectories_binary_data_02_15.json
+/networks_and_trajectories_ternary_data_02_15.json
+/networks_and_trajectories_binary_data_02_20.json
+/networks_and_trajectories_ternary_data_02_20.json
