--- a/data/.gitignore
+++ b/data/.gitignore
@@ -125,3 +125,39 @@
 /networks_and_trajectories_ternary_data_02_15.json
 /networks_and_trajectories_binary_data_02_20.json
 /networks_and_trajectories_ternary_data_02_20.json
+/networks_and_trajectories_quaternary_data_3.json
+/networks_and_trajectories_quaternary_data_4.json
+/networks_and_trajectories_quaternary_data_5.json
+/networks_and_trajectories_quaternary_data_6.json
+/networks_and_trajectories_quaternary_data_10.json
+/networks_and_trajectories_quaternary_data_01_3.json
+/networks_and_trajectories_quaternary_data_01_4.json
+/networks_and_trajectories_quaternary_data_01_5.json
+/networks_and_trajectories_quaternary_data_01_6.json
+/networks_and_trajectories_quaternary_data_01_10.json
+/networks_and_trajectories_quaternary_data_04_3.json
+/networks_and_trajectories_quaternary_data_04_4.json
+/networks_and_trajectories_quaternary_data_04_5.json
+/networks_and_trajectories_quaternary_data_04_6.json
+/networks_and_trajectories_quaternary_data_04_10.json
+/networks_and_trajectories_quaternary_data_02_3.json
+/networks_and_trajectories_quaternary_data_02_4.json
+/networks_and_trajectories_quaternary_data_02_5.json
+/networks_and_trajectories_quaternary_data_02_6.json
+/networks_and_trajectories_quaternary_data_02_10.json
+/networks_and_trajectories_quaternary_data_01_10.RData
+/networks_and_trajectories_quaternary_data_01_3.RData
+/networks_and_trajectories_quaternary_data_01_4.RData
+/networks_and_trajectories_quaternary_data_01_5.RData
+/networks_and_trajectories_quaternary_data_01_6.RData
+/networks_and_trajectories_quaternary_data_02_10.RData
+/networks_and_trajectories_quaternary_data_02_3.RData
+/networks_and_trajectories_quaternary_data_02_4.RData
+/networks_and_trajectories_quaternary_data_02_5.RData
+/networks_and_trajectories_quaternary_data_02_6.RData
+/networks_and_trajectories_quaternary_data_04_10.RData
+/networks_and_trajectories_quaternary_data_04_3.RData
+/networks_and_trajectories_quaternary_data_04_4.RData
+/networks_and_trajectories_quaternary_data_04_5.RData
+/networks_and_trajectories_quaternary_data_04_6.RData
+
