quaternary+score based

--- a/data/.gitignore
+++ b/data/.gitignore
@@ -161,3 +161,6 @@
 /networks_and_trajectories_quaternary_data_04_5.RData
 /networks_and_trajectories_quaternary_data_04_6.RData
 
+/networks_and_trajectories_quaternary_data_01_15.RData
+/networks_and_trajectories_quaternary_data_02_15.RData
+/networks_and_trajectories_quaternary_data_04_15.RData
